[project]
name = "biz-fuzz"
version = "0.1.0"
description = ""
authors = [
    {name = "Chris Winikka",email = "3827026+HundredVisionsGuy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "flet[all] (>=0.84.0,<0.85.0)",
    "pyside6 (>=6.11.0,<7.0.0)",
    "pytest (>=9.0.3,<10.0.0)"
]

[tool.poetry]
packages = [{include = "biz_fuzz", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
